Fixes preview getting cut off on bigger resolutions.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -3143,12 +3143,15 @@ h1 select:focus {
         right: 20px;
         z-index: 1;
     }
+
+    iframe {
+        max-width: 1200px;
+    }
 }
 
-.widget-preview-controls {
+.widget-preview_controls {
     .piped;
 
-    float: left;
     margin-top: 35px;
 
     form {
